Avoid `NullPointerException` in `CommonProcessor`